# MyLogger

./: CMakeLists.txt  main.cpp
include/logger/: logger.h  source_location.hpp
src/logger/: logger.cpp
